--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
+    "server-dev": "nodemon server/index.js",
+    "start": "node server/index.js",
+    "heroku-postbuild": "webpack -p"
   },
   "author": "Jon Eric Escobedo [linkedin.com/in/jonericescobedo]",
   "license": "ISC",
