--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js",
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+    "heroku-postbuild": "webpack -p"
   },
   "author": "Jon Eric Escobedo [linkedin.com/in/jonericescobedo]",
   "license": "ISC",
