--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ client/dist/bundle.js
 yarn.lock
 package-lock.json
 
+# Config folder w/ Keys
+config/
+
 # Dependency directorys
 # Deployed apps should consider commenting these lines out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
