--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "author": "Jon Eric Escobedo [linkedin.com/in/jonericescobedo]",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.16.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^4.5.0",
     "express": "^4.15.4",
     "google-map-react": "^0.24.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-places-autocomplete": "^5.4.2",
     "webpack": "^3.5.5"
   },
   "devDependencies": {
