--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.5.0",
     "express": "^4.15.4",
+    "file-loader": "^0.11.2",
     "google-map-react": "^0.24.0",
+    "image-webpack-loader": "^3.4.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-places-autocomplete": "^5.4.2",
